# ksetspp

./: .gitignore  CMakeLists.txt
include/ksets/: activationhistory.hpp  config.hpp  k0.hpp  k0collection.hpp  k1.hpp  k2.hpp  k2layer.hpp  k3.hpp
src/: k0.cpp  k0collection.cpp  k1.cpp  k2.cpp  main.cpp  testparam.cpp
src/ksets/: activationhistory.cpp  k0.cpp  k0collection.cpp  k1.cpp  k2.cpp  k2layer.cpp  k3.cpp
src/paramsearch/: gridsearch.py  requirements.txt  search.py  testparam.cpp
